# ex13p2

./: CMakeLists.txt
src/: main.cpp
